<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.botond.helloworld2.CrudActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/TextViewQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quotetextview"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/EditTextQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quoteedittext"
            android:inputType="textPersonName"></EditText>

        <TextView
            android:id="@+id/TextViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bytextview"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/EditTextAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/byedittext"
            android:inputType="textPersonName"></EditText>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <Button
            android:id="@+id/buttonDeleteQuote"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deletequotebutton" />

        <Button
            android:id="@+id/buttonUpdateQuote"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/updatequotebutton" />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>

