<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nametitle"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/EditTextQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editquotetext"
            android:inputType="textPersonName"></EditText>

        <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="editQuote"
            android:text="@string/editbutton"></Button>

    </LinearLayout>
</ScrollView>